feat: createHistory API endpoint modified
